--- a/mdemo/Makefile.am
+++ b/mdemo/Makefile.am
@@ -3,30 +3,26 @@
 # NOTE: Don't forget that in the libtool distribution, files in this
 # directory are distributed by the demo_distfiles variable in the top
 # level Makefile.
-AUTOMAKE_OPTIONS = foreign
+AUTOMAKE_OPTIONS = no-dependencies foreign
 
-INCLUDES = -I$(srcdir)/../libltdl
+SUBDIRS = modules
+
+INCLUDES = -I$(srcdir)/../libltdl -I$(srcdir)/modules
 
 EXTRA_DIST = acinclude.m4
-
-lib_LTLIBRARIES = libfoo1.la libfoo2.la
-libfoo1_la_SOURCES = foo1.c
-libfoo1_la_LDFLAGS = -export-symbols $(srcdir)/libfoo1.sym -lm -module
-
-libfoo2_la_SOURCES = foo2.c
-libfoo2_la_LDFLAGS = -export-symbols $(srcdir)/libfoo2.sym -lm -module
-
-include_HEADERS = foo.h
 
 bin_PROGRAMS = hell hell.debug
 
 # Create a version of hell that does dlopen.
 hell_SOURCES = main.c
-hell_LDADD = ../libltdl/libltdl.la -lm 
-hell_DEPENDENCIES = libfoo1.la libfoo2.la
+hell_LDADD = ../libltdl/libltdl.la \
+	-lm # We won't need this when libltdl takes care of dependencies
+hell_LDFLAGS = -export-dynamic -dlopen modules/libfoo1.la -dlopen modules/libfoo2.la
+hell_DEPENDENCIES = modules/libfoo1.la modules/libfoo2.la
 
 # Create an easier-to-debug version of hell.
 hell_debug_SOURCES = main.c
-hell_debug_LDADD = ../libltdl/libltdl.la libfoo1.la libfoo2.la
+hell_debug_LDADD = ../libltdl/libltdl.la
 hell_debug_LDFLAGS = -static -export-dynamic \
-	-dlpreopen libfoo1.la -dlpreopen libfoo2.la
+	-dlpreopen modules/libfoo1.la -dlpreopen modules/libfoo2.la
+# Shouldn't this be the same as -dlopen, since we're linking statically?
